build_tmp_debug.log
Repairing C64 System Plugin...
Compiling C64 System Plugin...
Compiling Asset Catalog...
/* com.apple.actool.compilation-results */
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/Build/OpenEmu.app/Contents/PlugIns/Systems/Commodore 64.oesystemplugin/Contents/Resources/Assets.car

/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:31:1: error: missing '@end'
   31 | @implementation OEC64SystemController
      | ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:29:1: note: implementation started here
   29 | @implementation OEC64SystemController
      | ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:31:17: error: reimplementation of class 'OEC64SystemController'
   31 | @implementation OEC64SystemController
      |                 ^
/Users/barriesanders/.gemini/antigravity/scratch/OpenEmu_Port/OpenEmu/SystemPlugins/Commodore 64/OEC64SystemController.m:29:17: note: previous definition is here
   29 | @implementation OEC64SystemController
      |                 ^
2 errors generated.
